--- a/App.xaml
+++ b/App.xaml
@@ -68,6 +68,14 @@
             <Setter Property="FontSize" Value="14"/>
         </Style>
 
+        <Style TargetType="Button" x:Key="SignInButton">
+            <Setter Property="Background" Value="#409AEE"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Height" Value="30"/>
+        </Style>
+        
         <Style TargetType="Label" x:Key="Title">
             <Setter Property="FontSize" Value="30"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -75,32 +83,70 @@
             <Setter Property="Foreground" Value="#409AEE"/>
             <Setter Property="FontWeight" Value="Bold"/>
         </Style>
-      
+
+        <Style TargetType="Label" x:Key="DetailsNameLabel">
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="HorizontalAlignment" Value="Right"/>
+        </Style>
+
+        <Style TargetType="Label" x:Key="DetailsBindingLabel">
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+        </Style>
+
         <Style x:Key="DottedFont">
             <Setter Property="TextElement.FontFamily" Value="/Resources/#dotsfont"/>
         </Style>
-
-        <Style TargetType="GridViewColumnHeader" x:Key="ColumnHeader">
-            <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Background" Value="White"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="BorderBrush" Value="White"/>
-            <Setter Property="HorizontalContentAlignment" Value="Left" />
+        
+        <Style x:Key="ColumnHeader" TargetType="GridViewColumnHeader">
             <Style.Triggers>
                 <Trigger Property="IsEnabled" Value="True">
-                    <Setter Property="BorderThickness" Value="0"/>
+                    <Setter Property="FontWeight" Value="Bold"/>
+                    <Setter Property="FontSize" Value="16"/>
                     <Setter Property="Background" Value="White"/>
+                    <Setter Property="BorderThickness" Value="0"/>
+                    <Setter Property="BorderBrush" Value="White"/>
+                    <Setter Property="HorizontalContentAlignment" Value="Left" />
+                </Trigger>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
+                                <TextBlock Text="{TemplateBinding Content}" FontSize="16"/>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                    <Setter Property="Padding" Value="0"></Setter>
+                    <Setter Property="Margin" Value="0"></Setter>
+                </Trigger>
+            </Style.Triggers>
+
+        </Style>
+        
+        <Style TargetType="ListView" x:Key="ListViewStyle">
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+
+        <Style TargetType="ListViewItem">
+            <Setter Property="Background" Value="White" />
+            <Setter Property="BorderBrush" Value="White" />
+            <Setter Property="BorderThickness" Value="0" />
+            <Style.Triggers>
+                <Trigger Property="IsSelected" Value="True">
+                    <Setter Property="Background" Value="White" />
+                </Trigger>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="White" />
                 </Trigger>
             </Style.Triggers>
         </Style>
 
-        <Style TargetType="TextBlock" x:Key="ListViewElement">
-            <Setter Property="FontSize" Value="16"/>
-        </Style>
-
-        <Style TargetType="ListView" x:Key="ListViewStyle">
+        <Style TargetType="ComboBox" x:Key="ComboBox">
             <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Width" Value="180"/>
         </Style>
     </Application.Resources>
 </Application>
