--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:vm="clr-namespace:POiG_Projekt.ViewModel"
         xmlns:nav="clr-namespace:POiG_Projekt.ViewModel.Navigator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="640" Width="1024"
+        Title="Samaad" Height="640" Width="1024"
         MinHeight="640" MinWidth="1024">
     <Window.Resources>
         <vm:MainWindowViewModel x:Key="viewModel"/>
