--- a/View/Subjects.xaml
+++ b/View/Subjects.xaml
@@ -16,39 +16,39 @@
         <Label x:Name="LabelTytul" Grid.Row="0" Content="Przedmioty" Style="{StaticResource Title}"/>
         <ListView x:Name="ListBoxPrzedmioty" ItemsSource="{Binding Przedmioty}" Grid.Row="1" Style="{StaticResource ListViewStyle}">
             <ListView.View>
-                <GridView>
+                <GridView AllowsColumnReorder="False">
                     <GridViewColumn Width="310" Header="Przedmiot" HeaderContainerStyle="{StaticResource ColumnHeader}">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Nazwa}" Style="{StaticResource ListViewElement}"/>
+                                <TextBlock Text="{Binding Nazwa}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
                     <GridViewColumn Width="60" Header="Skrót" HeaderContainerStyle="{StaticResource ColumnHeader}">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Skrot}" Style="{StaticResource ListViewElement}"/>
+                                <TextBlock Text="{Binding Skrot}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
                     <GridViewColumn Width="140" Header="Forma zaliczenia" HeaderContainerStyle="{StaticResource ColumnHeader}">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding FormaZaliczenia}" Style="{StaticResource ListViewElement}"/>
+                                <TextBlock Text="{Binding FormaZaliczenia}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
                     <GridViewColumn Width="60" Header="ECTS" HeaderContainerStyle="{StaticResource ColumnHeader}">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding ECTS}" Style="{StaticResource ListViewElement}"/>
+                                <TextBlock Text="{Binding ECTS}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
                     <GridViewColumn Width="120" Header="Liczba efektów" HeaderContainerStyle="{StaticResource ColumnHeader}">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding LiczbaEfektow}" Style="{StaticResource ListViewElement}"/>
+                                <TextBlock Text="{Binding LiczbaEfektow}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
