--- a/App.xaml
+++ b/App.xaml
@@ -101,24 +101,27 @@
         
         <Style x:Key="ColumnHeader" TargetType="GridViewColumnHeader">
             <Style.Triggers>
-                <Trigger Property="IsEnabled" Value="True">
-                    <Setter Property="FontWeight" Value="Bold"/>
-                    <Setter Property="FontSize" Value="16"/>
-                    <Setter Property="Background" Value="White"/>
-                    <Setter Property="BorderThickness" Value="0"/>
-                    <Setter Property="BorderBrush" Value="White"/>
-                    <Setter Property="HorizontalContentAlignment" Value="Left" />
+                <Trigger Property="IsMouseOver" Value="False">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
+                                <TextBlock Text="{TemplateBinding Content}" FontWeight="Bold" FontSize="16" Background="White" Margin="10 0 0 0" Padding="0" HorizontalAlignment="Left"/>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                    <Setter Property="Padding" Value="0"></Setter>
+                    <Setter Property="Margin" Value="0 10"></Setter>
                 </Trigger>
                 <Trigger Property="IsMouseOver" Value="True">
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
-                                <TextBlock Text="{TemplateBinding Content}" FontSize="16"/>
+                                <TextBlock Text="{TemplateBinding Content}" FontWeight="Bold" FontSize="16" Background="White" Margin="10 0 0 0" Padding="0" HorizontalAlignment="Left"/>
                             </ControlTemplate>
                         </Setter.Value>
                     </Setter>
                     <Setter Property="Padding" Value="0"></Setter>
-                    <Setter Property="Margin" Value="0"></Setter>
+                    <Setter Property="Margin" Value="0 10"></Setter>
                 </Trigger>
             </Style.Triggers>
 
@@ -132,12 +135,15 @@
             <Setter Property="Background" Value="White" />
             <Setter Property="BorderBrush" Value="White" />
             <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="Margin" Value="10 0 0 0"/>
             <Style.Triggers>
                 <Trigger Property="IsSelected" Value="True">
                     <Setter Property="Background" Value="White" />
+                    <Setter Property="Margin" Value="10 0 0 0"/>
                 </Trigger>
                 <Trigger Property="IsMouseOver" Value="True">
                     <Setter Property="Background" Value="White" />
+                    <Setter Property="Margin" Value="10 0 0 0"/>
                 </Trigger>
             </Style.Triggers>
         </Style>
