--- a/View/Courses.xaml
+++ b/View/Courses.xaml
@@ -49,7 +49,7 @@
                     <GridViewColumn Width="124" Header="Szczegóły" HeaderContainerStyle="{StaticResource ColumnHeader}">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Content="Zobacz" Style="{StaticResource BlueDetailsButton}" Margin="0 10 0 0"/>
+                                <Button Content="Zobacz" Style="{StaticResource BlueDetailsButton}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
