--- a/View/Subjects.xaml
+++ b/View/Subjects.xaml
@@ -38,14 +38,14 @@
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Width="60" Header="ECTS" HeaderContainerStyle="{StaticResource ColumnHeader}">
+                    <GridViewColumn Width="50" Header="ECTS" HeaderContainerStyle="{StaticResource ColumnHeader}">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding ECTS}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Width="120" Header="Liczba efektów" HeaderContainerStyle="{StaticResource ColumnHeader}">
+                    <GridViewColumn Width="130" Header="Liczba efektów" HeaderContainerStyle="{StaticResource ColumnHeader}">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding LiczbaEfektow}"/>
@@ -55,7 +55,7 @@
                     <GridViewColumn Width="130" Header="Szczegóły" HeaderContainerStyle="{StaticResource ColumnHeader}">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Content="Zobacz" Style="{StaticResource BlueDetailsButton}" Margin="0 10 0 0"/>
+                                <Button Content="Zobacz" Style="{StaticResource BlueDetailsButton}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
