--- a/App.xaml
+++ b/App.xaml
@@ -150,9 +150,10 @@
 
         <Style TargetType="ComboBox" x:Key="ComboBox">
             <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Background" Value="White"/>
             <Setter Property="Height" Value="30"/>
             <Setter Property="Width" Value="180"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="FontSize" Value="16"/>
         </Style>
     </Application.Resources>
 </Application>
