--- a/View/Details/SubjectsDetailsWindow.xaml
+++ b/View/Details/SubjectsDetailsWindow.xaml
@@ -1,18 +1,18 @@
-﻿<Page x:Class="POiG_Projekt.ViewModel.Details.SubjectsDetails"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:POiG_Projekt.ViewModel.Details"
+﻿<Window x:Class="POiG_Projekt.View.Details.SubjectsDetailsWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:POiG_Projekt.View.Details"
         xmlns:vm="clr-namespace:POiG_Projekt.ViewModel.Details"
       mc:Ignorable="d" 
       d:DesignHeight="640" d:DesignWidth="844"
       Title="SubjectsDetails"
       Background="White">
 
-    <Page.Resources>
+    <Window.Resources>
         <vm:SubjectsDetailsViewModel x:Key="ViewModel"/>
-    </Page.Resources>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -30,11 +30,11 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Label Grid.Column="0" Content="Skrót:" Style="{StaticResource DetailsNameLabel}"/>
-            <Label Grid.Column="1" Content="{Binding Skrot}" Style="{StaticResource DetailsBindingLabel}"/>
+            <Label x:Name="Skrot" Grid.Column="1" Content="{Binding Skrot}" Style="{StaticResource DetailsBindingLabel}"/>
             <Label Grid.Column="2" Content="Forma zaliczenia:" Style="{StaticResource DetailsNameLabel}"/>
-            <Label Grid.Column="3" Content="{Binding FormaZaliczenia}" Style="{StaticResource DetailsBindingLabel}"/>
+            <Label x:Name="Rodzaj" Grid.Column="3" Content="{Binding FormaZaliczenia}" Style="{StaticResource DetailsBindingLabel}"/>
             <Label Grid.Column="4" Content="Liczba ECTS:" Style="{StaticResource DetailsNameLabel}"/>
-            <Label Grid.Column="5" Content="{Binding ECTS}" Style="{StaticResource DetailsBindingLabel}"/>
+            <Label x:Name="ects" Grid.Column="5" Content="{Binding ECTS}" Style="{StaticResource DetailsBindingLabel}"/>
         </Grid>
         <ListView x:Name="ListViewEfekty" ItemsSource="{Binding Efekty}" Grid.Row="2" Style="{StaticResource ListViewStyle}">
             <ListView.View>
@@ -50,4 +50,4 @@
             </ListView.View>
         </ListView>
     </Grid>
-</Page>
+</Window>
