--- a/View/SignIn.xaml
+++ b/View/SignIn.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="POiG_Projekt.View.SignInWindow"
+﻿<Page x:Class="POiG_Projekt.View.SignIn"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,14 +6,14 @@
         xmlns:local="clr-namespace:POiG_Projekt.View"
         xmlns:vm="clr-namespace:POiG_Projekt.ViewModel"
         mc:Ignorable="d"
-        Title="SignInWindow" Height="450" Width="800">
+        Title="SignInWindow">
 
-    <Window.Resources>
+    <Page.Resources>
         <vm:SignInViewModel x:Key="viewModel"/>
-    </Window.Resources>
-    <Window.DataContext>
+    </Page.Resources>
+    <Page.DataContext>
         <vm:SignInViewModel/>
-    </Window.DataContext>
+    </Page.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="180"/>
@@ -38,12 +38,12 @@
                 <Label x:Name="HasloLabel" Margin="10 10 10 0"  Content="Haslo"/>
                 <TextBox x:Name="Password" Margin="10 0 10 0" MaxLength="20" MinWidth="220" Height="22" VerticalContentAlignment="Center" AllowDrop="False" Text="{Binding Haslo}"/>
 
-                <Button Content="Logowanie" Margin="10" Command="{Binding Login, Mode=OneWay}" CommandParameter="{Binding Mode=OneWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:SignInWindow}}}" Style="{StaticResource SignInButton}"/>
+                <Button Content="Logowanie" Margin="10" Command="{Binding Login, Mode=OneWay}" Style="{StaticResource SignInButton}"/>
                 <!-- vv Tymczasowy przycisk vv -->
-                <Button Content="bez logowania" Margin="10" Command="{Binding ShowMenu, Mode=OneWay}" CommandParameter="{Binding Mode=OneWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:SignInWindow}}}" Style="{StaticResource SignInButton}"/>
+                <Button Content="bez logowania" Margin="10" Command="{Binding ShowMenu, Mode=OneWay}" Style="{StaticResource SignInButton}"/>
                 <!-- ^^ Tymczasowy przycisk ^^ -->
 
             </StackPanel>
         </Grid>
     </Grid>
-</Window>
+</Page>
